--- a/template/templates/kiwanis-2012/scss/layout.scss
+++ b/template/templates/kiwanis-2012/scss/layout.scss
@@ -38,8 +38,8 @@
 	}
 
 	> div > div > div { 
-		margin-top: 24px;
-		margin-bottom: 29px;
+		padding-top: 18px;
+		padding-bottom: 29px;
 	}
 }
 
